--- a/progetti/carboni1.html
+++ b/progetti/carboni1.html
@@ -34,8 +34,8 @@
     <section class="testo-progetto">
     <h2>Domus n.310</h2>
     <p>Coppia di poltrone Delfino, progettate da Erberto Carboni per Arflex e prodotte a partire dal 1954.
-        Presentano una struttura di due elementi tubolari, sedile e schienale collegati da due braccioli in fusione di lega leggera, imbottitura in espanso, rivestimento in tessuto nuovo e gambe in metallo smaltato.
-        La Delfino di Erberto Carboni è una produzione rilevante dell’arredamento ‘organico’, un filone di produzione che a partire dagli anni ’50 del XX secolo si ispira alle forme della natura.
+        Presentano una struttura di due elementi tubolari, sedile e schienale collegati da due braccioli in fusione di lega leggera, imbottitura in espanso, rivestimento in tessuto nuovo e gambe in metallo smaltato.</p>
+        <p>La Delfino di Erberto Carboni è una produzione rilevante dell’arredamento ‘organico’, un filone di produzione che a partire dagli anni ’50 del XX secolo si ispira alle forme della natura.
         Nello specifico, il nome è preso in prestito dal più famoso mammifero marino: la poltrona presenta infatti braccioli come pinne e un corpo sinuoso come quello di un delfino.</p>
     </section>
     
