--- a/progetti/carboni4.html
+++ b/progetti/carboni4.html
@@ -34,8 +34,8 @@
     <section class="testo-progetto">
     <h2>RAI</h2>
     <p>Con la Rai, nel 1948, cominciò una lunga collaborazione che durò fino agli ultimi anni della sua vita.
-        Nel 1949 realizzò il primo marchio, con le lettere squadrate e il puntino sulla i, al quale, nel 1953, Carboni aggiunse il logo Tv, con la T grigia sopra una V bianca, su una base nera.
-        Fu il creatore della seconda sigla del Telegiornale, che andò in onda alle 20,45 del 3 gennaio 1954, giorno delle prime trasmissioni regolari della Rai.
+        Nel 1949 realizzò il primo marchio, con le lettere squadrate e il puntino sulla i, al quale, nel 1953, Carboni aggiunse il logo Tv, con la T grigia sopra una V bianca, su una base nera.</p>
+        <p>Fu il creatore della seconda sigla del Telegiornale, che andò in onda alle 20,45 del 3 gennaio 1954, giorno delle prime trasmissioni regolari della Rai.
         Fu sempre Carboni a disegnare il monoscopio della Rai, mandato in onda interrottamente dal 1954 al 1977.
         Realizzò anche la prima, celebrissima, sigla televisiva dell'inizio trasmissioni.</p>
     </section>
