--- a/progetti/carboni6.html
+++ b/progetti/carboni6.html
@@ -33,7 +33,9 @@
 <main>
     <section class="testo-progetto">
     <h2>La pasta del buon appetito</h2>
-    <p>Uno splendido annuncio disegnato da Carboni per il catalogo Barilla 1952. E' un ottimo esempio di grafica “pura”, ovvero usa solo mezzi grafici o tipografici per comunicare e nient'altro, cercando di ottenere il massimo del significato dal minimo dei mezzi, esaltando solo le potenzialità della sola grafica. E infatti, pur essendo un'opera di grafica illustrativa che difficilmente può essere considerata un pezzo di disegno metodico, è dotata di grande sintesi comunicando così con grande chiarezza e forza visiva. Ritrae perfettamente anche qualcosa che è ancora riconosciuto come Barilla, rivelando così il contributo fondamentale dato da Carboni all'immagine dell'azienda attraverso il suo lavoro fondamentale, che costantemente evolvendosi negli anni ha informato la comunicazione di Barilla fino ai giorni nostri.</p>
+    <p>Uno splendido annuncio disegnato da Carboni per il catalogo Barilla 1952. E' un ottimo esempio di grafica “pura”, ovvero usa solo mezzi grafici o tipografici per comunicare e nient'altro, cercando di ottenere il massimo del significato dal minimo dei mezzi, esaltando solo le potenzialità della sola grafica.</p>
+    <p>E infatti, pur essendo un'opera di grafica illustrativa che difficilmente può essere considerata un pezzo di disegno metodico, è dotata di grande sintesi comunicando così con grande chiarezza e forza visiva.</p> 
+    <p>Ritrae perfettamente anche qualcosa che è ancora riconosciuto come Barilla, rivelando così il contributo fondamentale dato da Carboni all'immagine dell'azienda attraverso il suo lavoro fondamentale, che costantemente evolvendosi negli anni ha informato la comunicazione di Barilla fino ai giorni nostri.</p>
     </section>
     
     
