--- a/progetti/grignani1.html
+++ b/progetti/grignani1.html
@@ -33,7 +33,8 @@
 <main>
     <section class="testo-progetto">
     <h2>FIAT 2800</h2>
-    <p>Una pubblicità sperimentale per l'automobile FIAT 2800. Le fotografie dell'auto sono racchiuse all'interno di un quadrato verde posto nella parte superiore della pagina. Una serie di sottili linee collega le miniature circolari formando così un percorso che ci fa scoprire l'auto fotogramma per fotogramma. Un grande senso di dinamismo è dato dalla fotografia principale dell'auto, ripresa da una prospettiva non comune, e anche dalla miniatura in basso e dal nome dell'auto che si muove dentro e fuori dal quadrato verde. Grignani ha intelligentemente lasciato vuoto il fondo pagina per far risaltare chiaramente il nome del prodotto.</p>
+    <p>Una pubblicità sperimentale per l'automobile FIAT 2800. Le fotografie dell'auto sono racchiuse all'interno di un quadrato verde posto nella parte superiore della pagina. Una serie di sottili linee collega le miniature circolari formando così un percorso che ci fa scoprire l'auto fotogramma per fotogramma.</p> 
+    <p>Un grande senso di dinamismo è dato dalla fotografia principale dell'auto, ripresa da una prospettiva non comune, e anche dalla miniatura in basso e dal nome dell'auto che si muove dentro e fuori dal quadrato verde. Grignani ha intelligentemente lasciato vuoto il fondo pagina per far risaltare chiaramente il nome del prodotto.</p>
     </section>
     
     
