--- a/progetti/grignani2.html
+++ b/progetti/grignani2.html
@@ -33,7 +33,8 @@
 <main>
     <section class="testo-progetto">
     <h2>Pura Lana Vergine</h2>
-    <p>Una sintesi perfetta del mondo della lana, attraverso l'astrazione di un gomitolo di lana. La controversa origine del marchio è dovuta al fatto che Grignani dovette partecipare sotto falso nome al concorso indetto dall'IWS, in quanto membro della giuria. Per lungo tempo il marchio è stato attribuito a un inesistente Francesco Saroglia, poiché Grignani non ha mai rivelato la sua paternità se non all'interno del suo studio. Il segno è stato originariamente abbozzato da Grignani a cena, usando una forchetta su una tovaglia. Nel 2011 Creative Review ha dichiarato che questo è il marchio numero uno di tutti i tempi.
+    <p>Una sintesi perfetta del mondo della lana, attraverso l'astrazione di un gomitolo di lana. La controversa origine del marchio è dovuta al fatto che Grignani dovette partecipare sotto falso nome al concorso indetto dall'IWS, in quanto membro della giuria.</p> 
+    <p>Per lungo tempo il marchio è stato attribuito a un inesistente Francesco Saroglia, poiché Grignani non ha mai rivelato la sua paternità se non all'interno del suo studio. Il segno è stato originariamente abbozzato da Grignani a cena, usando una forchetta su una tovaglia. Nel 2011 Creative Review ha dichiarato che questo è il marchio numero uno di tutti i tempi.
     </p>
     </section>
     
