--- a/progetti/grignani4.html
+++ b/progetti/grignani4.html
@@ -33,7 +33,8 @@
 <main>
     <section class="testo-progetto">
     <h2>Carte Patinate</h2>
-    <p>Un catalogo di carte patinate per Cartiere Ambrogio Binda, azienda produttrice di carta. Sullo sfondo, Grignani ha utilizzato una fotografia chiara che mostra alcuni indovinelli di carta, sovrastampandola con le tre iniziali dell'azienda, stampate ciascuna in un colore primario. La tipografia è tutta impostata in lettere minuscole di quello che sembra un mix di Futura e Super Grotesk di Arno Drescher. La cover posteriore è speculare alla parte anteriore, fatta eccezione per i colori che mantengono la stessa sequenza (magenta, ciano, giallo).</p>
+    <p>Un catalogo di carte patinate per Cartiere Ambrogio Binda, azienda produttrice di carta. Sullo sfondo, Grignani ha utilizzato una fotografia chiara che mostra alcuni indovinelli di carta, sovrastampandola con le tre iniziali dell'azienda, stampate ciascuna in un colore primario.</p> 
+    <p>La tipografia è tutta impostata in lettere minuscole di quello che sembra un mix di Futura e Super Grotesk di Arno Drescher. La cover posteriore è speculare alla parte anteriore, fatta eccezione per i colori che mantengono la stessa sequenza (magenta, ciano, giallo).</p>
     </section>
     
     
