--- a/progetti/huber4.html
+++ b/progetti/huber4.html
@@ -33,7 +33,9 @@
 <main>
     <section class="testo-progetto">
     <h2>Jazztime</h2>
-    <p>Max Huber disegnò diversi progetti di comunicazione per attività che avevano connessioni con l’ambiente musicale: riviste, poster, copertine di dischi, scenografie e interni. Tra tutti i generi musicali, il jazz è quello che più di tutti lo colpì e che lo portò a caratterizzare molte delle sue opere successive, non solo a livello comunicativo ma anche stilistico e di forma, dando a ogni composizione un ritmo dinamico, senza apparenti griglie. Huber scompone le immagini, le taglia e le riadatta, mettendole in equilibrio con il testo e a volte sovrapponendoli, ma mantenendo uno stile coerente e caratteristico. I seguenti artefatti comunicativi sono la piena espressione di questo stile grafico che ha fatto da filo conduttore per diversi anni nella carriera dell’artista, e cronologicamente ne mostrano l’evoluzione stilistica in rapporto al contesto culturale in continuo cambiamento.</p>
+    <p>Max Huber disegnò diversi progetti di comunicazione per attività che avevano connessioni con l’ambiente musicale: riviste, poster, copertine di dischi, scenografie e interni.</p> 
+    <p>Tra tutti i generi musicali, il jazz è quello che più di tutti lo colpì e che lo portò a caratterizzare molte delle sue opere successive, non solo a livello comunicativo ma anche stilistico e di forma, dando a ogni composizione un ritmo dinamico, senza apparenti griglie. Huber scompone le immagini, le taglia e le riadatta, mettendole in equilibrio con il testo e a volte sovrapponendoli, ma mantenendo uno stile coerente e caratteristico.</p> 
+    <p>I seguenti artefatti comunicativi sono la piena espressione di questo stile grafico che ha fatto da filo conduttore per diversi anni nella carriera dell’artista, e cronologicamente ne mostrano l’evoluzione stilistica in rapporto al contesto culturale in continuo cambiamento.</p>
     </section>
     
     
