--- a/progetti/iliprandi1.html
+++ b/progetti/iliprandi1.html
@@ -37,8 +37,8 @@
         le manifestazioni promozionali dal 1966 al 1974.
         A quell’epoca si usava frequentemente realizzare poster,
         di formato anche ridotto, che venivano offerti negli show-room
-        in occasione di eventi particolari.
-        Questo è stato progettato per una famosa settimana del design
+        in occasione di eventi particolari.</p>
+        <p>Questo è stato progettato per una famosa settimana del design
         a Milano che ha coinvolto, a suo tempo, l’ADI e tutto il mondo
         del design con particolare riferimento all’ambiente domestico.
         Il poster è esemplificativo di un certo uso del segno alfabetico, ma soprattutto dei colori primari rifacendosi a studi
