--- a/progetti/iliprandi2.html
+++ b/progetti/iliprandi2.html
@@ -36,15 +36,15 @@
     <p>Ha iniziato a collaborare con la RB quando non era
         ancora RB Rossana. E lo stabilimento si
         affacciava sulla autostrada Milano-Bergamo
-        senza le grandi torri bianche ad anticiparlo.
-        Gli è stato chiesto di occuparsi della
+        senza le grandi torri bianche ad anticiparlo.</p>
+        <p>Gli è stato chiesto di occuparsi della
         promozione di una cucina. 
         L’inizio di un successo che mi fu, generosamente,
         attribuito. 
         Tutto un periodo della mia 
         produzione grafica è stato contrassegnato
         da una tecnica che lo stampatore definiva
-        “a calamaio”. Dosando l’inchiostratura sui
+        “a calamaio”.</p><p> Dosando l’inchiostratura sui
         rulli si otteneva questo effetto arcobaleno.
         Non del tutto controllabile, perciò ricco di
         cromatismi.
