--- a/progetti/iliprandi3.html
+++ b/progetti/iliprandi3.html
@@ -33,10 +33,10 @@
 <main>
     <section class="testo-progetto">
     <h2>Basta una pillola</h2>
-    <p>Nell'Italia degli ultimi anni Sessanta una delle problematiche più scottanti è quella legata alla politica di controllo delle nascite.
-        Nel 1967 (quando la pubblicità degli anticoncezionali è ancora vietata) l' AIED, associazione per l'edeucazione demografica, affida ad Iliprandi la realizzazione di una immagine propagandistica a favore della pillola, dove una singola compressa si contrappone a un picccolo esercito di bambolotti che sembra marciare contro lo spettatore.
-        Si tratta di quarantasei pupazzi su quatro file parallele, nella cui ripetizione seriale si avverte l' influenza dela pop art.
-        Sopra di loro, una scritta a caratteri marcati dice "Basta" allo sviluppo incontrollato delle nascite.
+    <p>Nell'Italia degli ultimi anni Sessanta una delle problematiche più scottanti è quella legata alla politica di controllo delle nascite.</p>
+        <p>Nel 1967 (quando la pubblicità degli anticoncezionali è ancora vietata) l' AIED, associazione per l'edeucazione demografica, affida ad Iliprandi la realizzazione di una immagine propagandistica a favore della pillola, dove una singola compressa si contrappone a un picccolo esercito di bambolotti che sembra marciare contro lo spettatore.
+        Si tratta di quarantasei pupazzi su quatro file parallele, nella cui ripetizione seriale si avverte l' influenza dela pop art.</p>
+        <p>Sopra di loro, una scritta a caratteri marcati dice "Basta" allo sviluppo incontrollato delle nascite.
         Sotto, lo slogan si completa con "Basta una pillola": una semplice pastiglia dello stesso colore rosa delle bambole, è sufficiente ad evitare concepimenti indesiderati.
         </p>
     </section>
