--- a/progetti/iliprandi4.html
+++ b/progetti/iliprandi4.html
@@ -36,12 +36,12 @@
     <p>L’art Directors Club Milano, invitato dal Centro Pio Manzù a prender
         parte alla Prima Biennale internazionale di metodologia globale della progettazione
         “Le forme dell’ambiente umano”, promuoveva una ricerca dal titolo “Aggressività e violenza dell’uomo nei confronti dell’ambiente”.
-        Era il 1970. La ricerca dava origine
+        Era il 1970.</p><p> La ricerca dava origine
         a una mostra che dopo essere stata esposta a Rimini nell’ambito della Biennale veniva trasferita a Milano, dava luogo a una serie di dibattiti
         al Circolo di Via De Amicis e concludeva con la partecipazione all’ottavo congresso Yaia a Montecarlo sul tema “Anni 70,
         crisi dei mezzi di comunicazione
-        di massa”.
-        I poster fotografici, no alla violenza dell’ambiente naturale, no alla violenza dell’uomo contro l’uomo,
+        di massa”.</p>
+        <p>I poster fotografici, no alla violenza dell’ambiente naturale, no alla violenza dell’uomo contro l’uomo,
         no alla violenza nei centri storici, sono stati realizzati in quella occasione.
         </p>
     </section>
