--- a/progetti/iliprandi5.html
+++ b/progetti/iliprandi5.html
@@ -33,11 +33,11 @@
 <main>
     <section class="testo-progetto">
     <h2>La Rinascente</h2>
-    <p>Ha collaborato con l’ufficio pubblicità della Rinascente dal 1955 al 1967 progettando vetrine, reparti, manifesti, opuscoli, giornali, cataloghi, annunci pubblicitari,manifestazioni che coinvolgevano interi piani. In particolare mi sono dedicato al settore uomo dal 1962. (lavorando con Giorgio Armani stilista del reparto).
-        Il manifesto riprodotto ha suscitato un certo scalpore in un’epoca abituata ai figurini della Facis.
+    <p>Ha collaborato con l’ufficio pubblicità della Rinascente dal 1955 al 1967 progettando vetrine, reparti, manifesti, opuscoli, giornali, cataloghi, annunci pubblicitari,manifestazioni che coinvolgevano interi piani. In particolare mi sono dedicato al settore uomo dal 1962. (lavorando con Giorgio Armani stilista del reparto).</p>
+        <p>Il manifesto riprodotto ha suscitato un certo scalpore in un’epoca abituata ai figurini della Facis.
         Poco è concesso ai vestiti molto all’espressione maschile,
         o maschilista, con la quale i due ragazzi guardano la modella.
-        Lo scatto è di Serge Libiszewsky, uno dei suoi fotografi preferiti. In quegli anni ha usato molto l’immagine fotografica lavorando spesso con Aldo Ballo, Oliviero Toscani, Federico Patellani, Carlo Orsi, Mauro Masera, Ezio Frea ed altri.
+        Lo scatto è di Serge Libiszewsky, uno dei suoi fotografi preferiti.</p><p> In quegli anni ha usato molto l’immagine fotografica lavorando spesso con Aldo Ballo, Oliviero Toscani, Federico Patellani, Carlo Orsi, Mauro Masera, Ezio Frea ed altri.
         </p>
     </section>
     
