--- a/progetti/iliprandi6.html
+++ b/progetti/iliprandi6.html
@@ -34,10 +34,10 @@
     <section class="testo-progetto">
     <h2>Photograpy italiana </h2>
     <p>E’ stato art director dell’edizione italiana di Popular Photography dal 1966 al 72, curando una serie del tutto indipendente dalla pubblicazione americana
-        sia come testi ed immagini sia come impostazione grafica.
-        La copertina riprodotta si riferisce ad una grande mostra
-        con opere di Robert Capa, Werner Bischof, David Seymour, Leonard Freed, Dan Weiner, ma anche ad un momento di particolari tensioni sociali.
-        Il lavoro a Popular Photography gli ha dato modo
+        sia come testi ed immagini sia come impostazione grafica.</p>
+        <p>La copertina riprodotta si riferisce ad una grande mostra
+        con opere di Robert Capa, Werner Bischof, David Seymour, Leonard Freed, Dan Weiner, ma anche ad un momento di particolari tensioni sociali.</p>
+        <p>Il lavoro a Popular Photography gli ha dato modo
         di venire a contatto con i più importanti autori del momento, consentendomi di approfondire il linguaggio delle immagini fotografiche sia dal punto di vista della tecnica che da quello dei contenuti.
         </p>
     </section>
