--- a/progetti/milani1.html
+++ b/progetti/milani1.html
@@ -33,7 +33,7 @@
 <main>
     <section class="testo-progetto">
     <h2>For a cleaner Napoli</h2> <!-- MODIFICARE -->
-    <p>Il manifesto di Milani è uno dei “più nuovi, un cielo azzurro, come nella pubblicità di un detersivo, ma il bucato questa volta è fatto di lettere colorate, lettere a bastoncino ritagliate (…) appese a uno stendibiancheria” (Arturo Carlo Quintavalle ). Milani “letteralmente” ripulisce la città mettendo a secco il suo nome, realizzando così un'opera meravigliosa sia per estetica che per valore culturale</p> <!-- MODIFICARE -->
+    <p>Il manifesto di Milani è uno dei “più nuovi, un cielo azzurro, come nella pubblicità di un detersivo, ma il bucato questa volta è fatto di lettere colorate, lettere a bastoncino ritagliate appese a uno stendibiancheria” (Arturo Carlo Quintavalle).</p><p> Milani “letteralmente” ripulisce la città mettendo a secco il suo nome, realizzando così un'opera meravigliosa sia per estetica che per valore culturale</p> <!-- MODIFICARE -->
     </section>
     
     
