--- a/progetti/milani4.html
+++ b/progetti/milani4.html
@@ -34,7 +34,7 @@
     <section class="testo-progetto">
     <h2>Festival de Jazz Montreaux</h2> <!-- MODIFICARE -->
     <p>
-        È stato progettato per il Montreaux Jazz Festival. La tipografia è inclinata in base alla fotografia, in modo che ogni riga di testo sembri diffondersi dal violoncello. Il carattere tipografico leggibile ma forte è Schmalfette Grotesk che Milani ha utilizzato magistralmente durante tutta la sua carriera. Il bianco e nero aiuta a comunicare l'essenza della musica a cui il manifesto si riferisce e produce un'immagine delicata immersa in un'atmosfera noir e notturna. Inedito su internet.</p> <!-- MODIFICARE -->
+        È stato progettato per il Montreaux Jazz Festival. La tipografia è inclinata in base alla fotografia, in modo che ogni riga di testo sembri diffondersi dal violoncello.</p><p> Il carattere tipografico leggibile ma forte è Schmalfette Grotesk che Milani ha utilizzato magistralmente durante tutta la sua carriera. Il bianco e nero aiuta a comunicare l'essenza della musica a cui il manifesto si riferisce e produce un'immagine delicata immersa in un'atmosfera noir e notturna. Inedito su internet.</p> <!-- MODIFICARE -->
     </section>
     
     
