--- a/progetti/monguzzi2.html
+++ b/progetti/monguzzi2.html
@@ -34,7 +34,7 @@
     <section class="testo-progetto">
     <h2>Fragile</h2> <!-- MODIFICARE -->
     <p>
-        L'opera culturale di Bruno Monguzzi, il suo enorme impegno, il suo stretto legame e la pluriennale collaborazione con il Museo d'Arte Lugano hanno reso possibile la realizzazione di un'opera così straordinaria, estremamente intelligente e altamente professionale. Bruno Monguzzi ha realizzato tutta la comunicazione visiva del museo: il logo, le locandine, gli inviti ei cataloghi. La maggior parte dei manifesti e delle pubblicazioni di Monguzzi sono stati premiati in Svizzera e da giurie internazionali, e la maggior parte dei suoi manifesti sono ormai esauriti.</p> <!-- MODIFICARE -->
+        L'opera culturale di Bruno Monguzzi, il suo enorme impegno, il suo stretto legame e la pluriennale collaborazione con il Museo d'Arte Lugano hanno reso possibile la realizzazione di un'opera così straordinaria, estremamente intelligente e altamente professionale.</p><p> Bruno Monguzzi ha realizzato tutta la comunicazione visiva del museo: il logo, le locandine, gli inviti ei cataloghi. La maggior parte dei manifesti e delle pubblicazioni di Monguzzi sono stati premiati in Svizzera e da giurie internazionali, e la maggior parte dei suoi manifesti sono ormai esauriti.</p> <!-- MODIFICARE -->
     </section>
     
     
