--- a/progetti/monguzzi4.html
+++ b/progetti/monguzzi4.html
@@ -34,7 +34,7 @@
     <section class="testo-progetto">
     <h2>Alice edizioni</h2> <!-- MODIFICARE -->
     <p>
-        I compiti che oggigiorno molti designer farebbero al computer, Monguzzi preferisce farli con le mani. Usa strumenti tradizionali, come penne e forbici, disponendo fogli stampati, tagliando e disegnando e apprezzando veramente la materialità del processo. Le sue opere hanno quindi una forte qualità tattile e i suoi libri e cataloghi a volte ricordano allo spettatore oggetti scultorei che si dispiegano nello spazio e nel tempo.</p> <!-- MODIFICARE -->
+        I compiti che oggigiorno molti designer farebbero al computer, Monguzzi preferisce farli con le mani. Usa strumenti tradizionali, come penne e forbici, disponendo fogli stampati, tagliando e disegnando e apprezzando veramente la materialità del processo.</p><p> Le sue opere hanno quindi una forte qualità tattile e i suoi libri e cataloghi a volte ricordano allo spettatore oggetti scultorei che si dispiegano nello spazio e nel tempo.</p> <!-- MODIFICARE -->
     </section>
     
     
