--- a/progetti/monguzzi5.html
+++ b/progetti/monguzzi5.html
@@ -35,7 +35,7 @@
     <h2>Cinquant'anni di carta</h2> <!-- MODIFICARE -->
     <p>
         L'attività professionale di Bruno Monguzzi raccontata attraverso “cinquant’anni di carta".
-        “Cinquant’anni di carta": così Bruno Monguzzi definisce la sua attività professionale iniziata nel 1961. Realizzato in occasione della mostra presso il m.a.x.museo di Chiasso, il catalogo ripercorre la carriera del grafico svizzero insignito del titolo di Honorary Royal Designer for Industry. dell’articolato iter che accompagna i vari progetti grafici.<!-- MODIFICARE -->
+        “Cinquant’anni di carta": così Bruno Monguzzi definisce la sua attività professionale iniziata nel 1961. </p><p>Realizzato in occasione della mostra presso il m.a.x.museo di Chiasso, il catalogo ripercorre la carriera del grafico svizzero insignito del titolo di Honorary Royal Designer for Industry. dell’articolato iter che accompagna i vari progetti grafici.<!-- MODIFICARE -->
     </section>
     
     
