--- a/progetti/munari2.html
+++ b/progetti/munari2.html
@@ -33,7 +33,7 @@
 <main>
     <section class="testo-progetto">
     <h2>Campari</h2>
-    <p>Una grande sperimentazione visiva e tipografica. Il cartellone è stato progettato per l'inaugurazione della Metropolitana di Milano ed è stato esposto lungo le banchine dei treni. Il titolo ufficiale è “Declinatura grafica del nome Campari”, variazione grafica del nome Campari. Nel 2000 Italo Lupi ha disegnato un omaggio a questo manifesto sostituendo la parola Campari con Munari.</p>
+    <p>Una grande sperimentazione visiva e tipografica. Il cartellone è stato progettato per l'inaugurazione della Metropolitana di Milano ed è stato esposto lungo le banchine dei treni. </p><p>Il titolo ufficiale è “Declinatura grafica del nome Campari”, variazione grafica del nome Campari. Nel 2000 Italo Lupi ha disegnato un omaggio a questo manifesto sostituendo la parola Campari con Munari.</p>
     </section>
     
     
