--- a/progetti/munari4.html
+++ b/progetti/munari4.html
@@ -33,7 +33,7 @@
 <main>
     <section class="testo-progetto">
     <h2>I Satelliti</h2>
-    <p>Una soluzione semplice ma intelligente che produce una delle serie più iconiche di copertine di libri. Munari inserisce il titolo all'interno di una macchia nera circondata da una serie di puntini neri più piccoli, identificando così efficacemente la collana del libro. Utilizzando una sola forma (il cerchio) e un solo inchiostro (il nero), Munari ha generato un intero universo visivo per una serie di libri dal titolo coerente I satelliti. E' la prova che una soluzione grafica semplice ma intelligente può produrre una comunicazione potente.</p>
+    <p>Una soluzione semplice ma intelligente che produce una delle serie più iconiche di copertine di libri. Munari inserisce il titolo all'interno di una macchia nera circondata da una serie di puntini neri più piccoli, identificando così efficacemente la collana del libro.</p><p> Utilizzando una sola forma (il cerchio) e un solo inchiostro (il nero), Munari ha generato un intero universo visivo per una serie di libri dal titolo coerente I satelliti. E' la prova che una soluzione grafica semplice ma intelligente può produrre una comunicazione potente.</p>
     </section>
     
     
