--- a/progetti/munari6.html
+++ b/progetti/munari6.html
@@ -33,7 +33,7 @@
 <main>
     <section class="testo-progetto">
     <h2>Almanacco Anti-Letterario di Bompiani</h2>
-    <p>Munari, che iniziò a disegnare l'almanacco di Bompiani nel 1930, disegnò la copertina di questo polemico almanacco antiletterario e compose l'inserto fotografico intitolato “Udite! Udite!» (Ascolta! Ascolta!). L'inserto presenta citazioni di Benito Mussolini e cerchi tagliati nelle pagine che mostrano il volto di Mussolini visto attraverso un cannocchiale, producendo così una soluzione visiva di grande suggestione.</p>
+    <p>Munari, che iniziò a disegnare l'almanacco di Bompiani nel 1930, disegnò la copertina di questo polemico almanacco antiletterario e compose l'inserto fotografico intitolato “Udite! Udite!» (Ascolta! Ascolta!).</p><p> L'inserto presenta citazioni di Benito Mussolini e cerchi tagliati nelle pagine che mostrano il volto di Mussolini visto attraverso un cannocchiale, producendo così una soluzione visiva di grande suggestione.</p>
     </section>
     
     
