--- a/progetti/muratore2.html
+++ b/progetti/muratore2.html
@@ -33,7 +33,7 @@
 <main>
     <section class="testo-progetto">
     <h2>Pittori di Corrente</h2> <!-- MODIFICARE -->
-    <p>Un manifesto che promuove una mostra di pittura caratterizzato da un bel contrasto tra lo sfondo dai colori vivaci e il carattere tipografico classico. Corrente è stato insieme un movimento artistico, una rivista e una galleria d'arte fondata da Ernesto Treccani nel 1938 per promuovere artisti importanti come Bruno Cassinari, Carlo Carrà, Emilio Vedova, Lucio Fontana, Renato Guttuso e altri. 
+    <p>Un manifesto che promuove una mostra di pittura caratterizzato da un bel contrasto tra lo sfondo dai colori vivaci e il carattere tipografico classico.</p><p> Corrente è stato insieme un movimento artistico, una rivista e una galleria d'arte fondata da Ernesto Treccani nel 1938 per promuovere artisti importanti come Bruno Cassinari, Carlo Carrà, Emilio Vedova, Lucio Fontana, Renato Guttuso e altri. 
     </p> <!-- MODIFICARE -->
     </section>
     
