--- a/progetti/muratore4.html
+++ b/progetti/muratore4.html
@@ -33,7 +33,7 @@
 <main>
     <section class="testo-progetto">
     <h2>Kardex</h2> <!-- MODIFICARE -->
-    <p>Cataloghi-prodotti per “Kardex” disegnato da Remo Muratore mentre lavorava per lo Studio Boggeri negli anni '40. La prima forma di design delle informazioni, i colori forti e la fotografia diretta conferiscono loro un gusto notevole e piacevole. Andiamo a prendere dei mobili per ufficio!
+    <p>Cataloghi-prodotti per “Kardex” disegnato da Remo Muratore mentre lavorava per lo Studio Boggeri negli anni '40. La prima forma di design delle informazioni, i colori forti e la fotografia diretta conferiscono loro un gusto notevole e piacevole. 
     </p> <!-- MODIFICARE -->
     </section>
     
