--- a/progetti/nizzoli2.html
+++ b/progetti/nizzoli2.html
@@ -33,7 +33,7 @@
 <main>
     <section class="testo-progetto">
     <h2>Bernocchi</h2> <!-- MODIFICARE -->
-    <p>I poster di Nizzoli per Campari sono caratterizzati da uno stile distintivo e vivace. Utilizzava colori audaci e vibranti, spesso con un forte uso del rosso, il colore iconico associato al marchio Campari. I suoi design erano accattivanti e giocosi, con una combinazione di elementi grafici e testi che catturavano l'attenzione del pubblico.</p> <!-- MODIFICARE -->
+    <p>I poster di Nizzoli per Campari sono caratterizzati da uno stile distintivo e vivace. Utilizzava colori audaci e vibranti, spesso con un forte uso del rosso, il colore iconico associato al marchio Campari.</p><p> I suoi design erano accattivanti e giocosi, con una combinazione di elementi grafici e testi che catturavano l'attenzione del pubblico.</p> <!-- MODIFICARE -->
     </section>
     
     
