--- a/progetti/nizzoli3.html
+++ b/progetti/nizzoli3.html
@@ -33,9 +33,9 @@
 <main>
     <section class="testo-progetto">
     <h2>Lettera 22</h2> <!-- MODIFICARE -->
-    <p>Questo modello era noto per il suo design elegante e funzionale, che combinava linee pulite, una tastiera ergonomica e una struttura compatta.
-       La Lettera 22 presentava una scocca in alluminio pressofuso e un sistema di scrittura preciso e affidabile. Era una macchina da scrivere portatile che offriva una soluzione pratica per il lavoro d'ufficio e la scrittura professionale.
-       Il design della Lettera 22 era caratterizzato da una combinazione di estetica e funzionalità. Nizzoli si concentrò sulla semplicità e sull'ergonomia, creando una macchina da scrivere che fosse facile da usare e piacevole da guardare.</p> <!-- MODIFICARE -->
+    <p>Questo modello era noto per il suo design elegante e funzionale, che combinava linee pulite, una tastiera ergonomica e una struttura compatta.</p>
+       <p>La Lettera 22 presentava una scocca in alluminio pressofuso e un sistema di scrittura preciso e affidabile. Era una macchina da scrivere portatile che offriva una soluzione pratica per il lavoro d'ufficio e la scrittura professionale.
+       Il design della Lettera 22 era caratterizzato da una combinazione di estetica e funzionalità.</p><p> Nizzoli si concentrò sulla semplicità e sull'ergonomia, creando una macchina da scrivere che fosse facile da usare e piacevole da guardare.</p> <!-- MODIFICARE -->
     </section>
     
     
