--- a/progetti/nizzoli4.html
+++ b/progetti/nizzoli4.html
@@ -33,7 +33,7 @@
 <main>
     <section class="testo-progetto">
     <h2>Divisumma 14</h2> <!-- MODIFICARE -->
-    <p>Marcello Nizzoli, noto designer italiano, ha contribuito alla progettazione della Divisumma 14 per l'azienda Olivetti. Questa calcolatrice elettronica è stata introdotta nel 1972 ed è stata una delle prime calcolatrici Olivetti a utilizzare un display a LED. Il design di Nizzoli per la Divisumma 14 si caratterizzava per linee pulite e una forma elegante, che la rendevano una calcolatrice apprezzata per la sua estetica e funzionalità.</p> <!-- MODIFICARE -->
+    <p>Marcello Nizzoli, noto designer italiano, ha contribuito alla progettazione della Divisumma 14 per l'azienda Olivetti. Questa calcolatrice elettronica è stata introdotta nel 1972 ed è stata una delle prime calcolatrici Olivetti a utilizzare un display a LED.</p><p> Il design di Nizzoli per la Divisumma 14 si caratterizzava per linee pulite e una forma elegante, che la rendevano una calcolatrice apprezzata per la sua estetica e funzionalità.</p> <!-- MODIFICARE -->
     </section>
     
     
