--- a/progetti/nizzoli5.html
+++ b/progetti/nizzoli5.html
@@ -33,8 +33,9 @@
 <main>
     <section class="testo-progetto">
     <h2>Olivetti Lexikon</h2> <!-- MODIFICARE -->
-    <p>In questo manifesto del 1949 per la macchina per scrivere Lexikon 80 Marcello Nizzoli, autore sia del manifesto che del design della macchina, si ispira ad un disegno di un uccello di Paul Klee. Nizzoli lo trasforma graficamente in un uccello dal corpo stroboscopico che uscendo dalla parte terminale del carrello di scrittura della macchina, avvisa con il suo cinguettio dell’avvenuto scorrimento.
-        La citazione alla pittura di Klee è un omaggio di Nizzoli alla cultura della Bauhaus punto di riferimento della sua formazione ed esperienza culturale.</p> <!-- MODIFICARE -->
+    <p>In questo manifesto del 1949 per la macchina per scrivere Lexikon 80 Marcello Nizzoli, autore sia del manifesto che del design della macchina, si ispira ad un disegno di un uccello di Paul Klee.</p> 
+    <p>Nizzoli lo trasforma graficamente in un uccello dal corpo stroboscopico che uscendo dalla parte terminale del carrello di scrittura della macchina, avvisa con il suo cinguettio dell’avvenuto scorrimento.</p>
+    <p>La citazione alla pittura di Klee è un omaggio di Nizzoli alla cultura della Bauhaus punto di riferimento della sua formazione ed esperienza culturale.</p> <!-- MODIFICARE -->
     </section>
     
     
