--- a/progetti/noorda1.html
+++ b/progetti/noorda1.html
@@ -33,8 +33,9 @@
 <main>
     <section class="testo-progetto">
     <h2>Metro di Milano</h2>
-    <p>Il sistema di segnaletica progettato da Noorda per la metropolitana di Milano ha introdotto un'approccio innovativo e coerente all'informazione visiva. L'obiettivo principale era guidare e orientare i passeggeri all'interno delle stazioni e dei treni in modo intuitivo ed efficiente. Noorda ha adottato un approccio sistematico, sviluppando un insieme di elementi di segnaletica coerenti e ben coordinati.
-        Uno degli elementi chiave del sistema di segnaletica era la "Linea di Indicazione". Si trattava di una fascia colorata, che seguiva le pareti delle stazioni, fornendo informazioni sulla direzione e il percorso dei treni. Ogni linea della metropolitana aveva un colore e un numero associato, che venivano utilizzati nella segnaletica per indicare le destinazioni e le linee di riferimento.</p>
+    <p>Il sistema di segnaletica progettato da Noorda per la metropolitana di Milano ha introdotto un'approccio innovativo e coerente all'informazione visiva.</p>
+    <p> L'obiettivo principale era guidare e orientare i passeggeri all'interno delle stazioni e dei treni in modo intuitivo ed efficiente. Noorda ha adottato un approccio sistematico, sviluppando un insieme di elementi di segnaletica coerenti e ben coordinati.</p>
+    <p>Uno degli elementi chiave del sistema di segnaletica era la "Linea di Indicazione". Si trattava di una fascia colorata, che seguiva le pareti delle stazioni, fornendo informazioni sulla direzione e il percorso dei treni. Ogni linea della metropolitana aveva un colore e un numero associato, che venivano utilizzati nella segnaletica per indicare le destinazioni e le linee di riferimento.</p>
     </section>
     
     
