--- a/progetti/noorda2.html
+++ b/progetti/noorda2.html
@@ -33,7 +33,9 @@
 <main>
     <section class="testo-progetto">
     <h2>Agip</h2>
-    <p>L’esigenza di rinnovare il marchio dell’Eni è nata nel momento in cui la società ha smesso di essere l’Ente nazionale idrocarburi ed è diventata una società per azioni. Il compito di sviluppare una nuova “corporate image” del Gruppo Eni è stato affidato a Noorda che ha presentato un progetto grafico caratterizzato al tempo stesso dall’essenzialità degli elementi e da una notevole forza e suggestione: il caratteristico cane a sei zampe è stato unito al logo Eni occupando uno spazio quadrato attraversato centralmente da una riga rossa orizzontale. Di conseguenza anche il cane ha subito un intervento di restyling e la sua lunghezza è stata accorciata per adattarla a quella del logotipo Eni.</p>
+    <p>L’esigenza di rinnovare il marchio dell’Eni è nata nel momento in cui la società ha smesso di essere l’Ente nazionale idrocarburi ed è diventata una società per azioni.</p> 
+    <p>Il compito di sviluppare una nuova “corporate image” del Gruppo Eni è stato affidato a Noorda che ha presentato un progetto grafico caratterizzato al tempo stesso dall’essenzialità degli elementi e da una notevole forza e suggestione: il caratteristico cane a sei zampe è stato unito al logo Eni occupando uno spazio quadrato attraversato centralmente da una riga rossa orizzontale.</p> 
+    <p>Di conseguenza anche il cane ha subito un intervento di restyling e la sua lunghezza è stata accorciata per adattarla a quella del logotipo Eni.</p>
     </section>
     
     
