--- a/progetti/noorda3.html
+++ b/progetti/noorda3.html
@@ -33,7 +33,8 @@
 <main>
     <section class="testo-progetto">
     <h2>Regione Lombardia</h2>
-    <p>Il simbolo della Regione Lombardia è stato elaborato e progettato da Noorda insieme a Roberto Sambonet e Pino Tovaglia ed è una stilizzazione della “rosa camuna”, una delle incisioni rupestri presenti in Val Canonica. Noorda ha dichiarato: “Del logo della regione Lombardia, ricordo che Munari mi disse ‘è un logo giusto: ha forza, si memorizza bene, anche un bambino riuscirebbe a ricordarlo’”.</p>
+    <p>Il simbolo della Regione Lombardia è stato elaborato e progettato da Noorda insieme a Roberto Sambonet e Pino Tovaglia ed è una stilizzazione della “rosa camuna”, una delle incisioni rupestri presenti in Val Canonica.</p> 
+    <p>Noorda ha dichiarato: “Del logo della regione Lombardia, ricordo che Munari mi disse ‘è un logo giusto: ha forza, si memorizza bene, anche un bambino riuscirebbe a ricordarlo’”.</p>
     </section>
     
     
