--- a/progetti/noorda4.html
+++ b/progetti/noorda4.html
@@ -35,7 +35,8 @@
     <h2> La Feltrinelli</h2>
     <p>La collaborazione di Bob Noorda con la casa editrice Feltrinelli risale agli
         inizi degli anni sessanta con Giangiacomo Feltrinelli. Successivamente è
-        Inge Feltrinelli a proporre di ridefinire completamente l’immagine coordinata della società. Il progetto parte con la progettazione grafica della collana editoriale “Universale Economica” Feltrinelli e con il disegno di un
+        Inge Feltrinelli a proporre di ridefinire completamente l’immagine coordinata della società.</p> 
+        <p>Il progetto parte con la progettazione grafica della collana editoriale “Universale Economica” Feltrinelli e con il disegno di un
         nuovo marchio e di un nuovo logotipo. Bob Noorda decide di progettare la
         lettera F ruotata di 45 gradi e tagliata verticalmente.</p>
     </section>
