--- a/progetti/sambonet3.html
+++ b/progetti/sambonet3.html
@@ -33,9 +33,9 @@
 <main>
     <section class="testo-progetto">
     <h2> Pesciera ovale</h2>
-    <p>La pesciera ovale è realizzata in acciaio inossidabile di alta qualità ed è caratterizzata da una forma allungata e slanciata. Il design pulito e minimalista di Sambonet è evidente in questa creazione, che unisce estetica e funzionalità.
-        La pesciera ovale di Sambonet è stata progettata per consentire di presentare e servire il pesce in modo elegante. La forma ovale offre spazio sufficiente per disporre i vari tipi di pesce in modo attraente, mentre le sue linee sottili e rifinite donano un tocco di raffinatezza alla tavola.
-        Grazie alla sua popolarità e al suo design senza tempo, la pesciera ovale di Sambonet è diventata un pezzo di design classico. È apprezzata sia in ambito domestico che in contesti più formali come ristoranti e hotel di lusso.</p>
+    <p>La pesciera ovale è realizzata in acciaio inossidabile di alta qualità ed è caratterizzata da una forma allungata e slanciata. Il design pulito e minimalista di Sambonet è evidente in questa creazione, che unisce estetica e funzionalità.</p>
+        <p>La pesciera ovale di Sambonet è stata progettata per consentire di presentare e servire il pesce in modo elegante. La forma ovale offre spazio sufficiente per disporre i vari tipi di pesce in modo attraente, mentre le sue linee sottili e rifinite donano un tocco di raffinatezza alla tavola.</p>
+        <p>Grazie alla sua popolarità e al suo design senza tempo, la pesciera ovale di Sambonet è diventata un pezzo di design classico. È apprezzata sia in ambito domestico che in contesti più formali come ristoranti e hotel di lusso.</p>
     </section>
     
     
