--- a/progetti/schawinsky1.html
+++ b/progetti/schawinsky1.html
@@ -33,7 +33,8 @@
 <main>
     <section class="testo-progetto">
     <h2>La Rivista - Sì</h2> <!-- MODIFICARE -->
-    <p>Inserto manifesto de La Rivista che promuove l'elezione del Partito Nazionale Fascista. Schawinsky ha utilizzato il fotomontaggio per ritrarre il dittatore come un'entità formata dai cittadini e alla quale i cittadini appartengono, identificando così il popolo e il suo leader come la stessa cosa. Il senso della folla è visivamente mantenuto coerente attraverso l'ingrandimento del motivo retinato nella testa, mentre l'autorità di Mussolini è enfatizzata sia dal suo sguardo dall'alto verso il basso sia dalla posizione del leader (la testa) e da quella dei cittadini (il corpo).
+    <p>Inserto manifesto de La Rivista che promuove l'elezione del Partito Nazionale Fascista. Schawinsky ha utilizzato il fotomontaggio per ritrarre il dittatore come un'entità formata dai cittadini e alla quale i cittadini appartengono, identificando così il popolo e il suo leader come la stessa cosa.</p> 
+    <p>Il senso della folla è visivamente mantenuto coerente attraverso l'ingrandimento del motivo retinato nella testa, mentre l'autorità di Mussolini è enfatizzata sia dal suo sguardo dall'alto verso il basso sia dalla posizione del leader (la testa) e da quella dei cittadini (il corpo).
     </p> <!-- MODIFICARE -->
     </section>
     
