--- a/progetti/schawinsky5.html
+++ b/progetti/schawinsky5.html
@@ -33,7 +33,7 @@
 <main>
     <section class="testo-progetto">
     <h2>La pubblicità</h2> <!-- MODIFICARE -->
-    <p>Copertina per la rivista La Pubblicità, con una fotografia senza titolo di T. Lux Feininger del 1928. “Schawinsky rende omaggio alle sue radici Bauhaus con una foto di due giovani ed energici studenti Bauhaus (Georg Hartmann e Miriam Manuckiam) scattata dal suo amico e membro della Bauhaus jazz band T. Lux Feininger (…) Questo numero include un articolo scritto da Schawinsky opportunamente intitolato 'Pubblicità funzionale'”.
+    <p>Copertina per la rivista La Pubblicità, con una fotografia senza titolo di T. Lux Feininger del 1928. “Schawinsky rende omaggio alle sue radici Bauhaus con una foto di due giovani ed energici studenti Bauhaus (Georg Hartmann e Miriam Manuckiam) scattata dal suo amico e membro della Bauhaus jazz band T. Lux Feininger.</p><p> Questo numero include un articolo scritto da Schawinsky opportunamente intitolato 'Pubblicità funzionale'”.
     </p> <!-- MODIFICARE -->
     </section>
     
