--- a/progetti/steiner1.html
+++ b/progetti/steiner1.html
@@ -33,7 +33,8 @@
 <main>
     <section class="testo-progetto">
     <h2>Mostra della Ricostruzione</h2>
-    <p>Le devastazioni della guerra e i lavori di ricostruzione sono ben illustrati da un tricolore spezzato (la bandiera italiana) in primo piano e dai piloni inclinati sullo sfondo. Tutto è enfatizzato da una tipografia traballante. Progettato per la Mostra della Ricostruzione tenutasi a Palazzo dell'Arengario in Piazza Duomo, Milano. La mostra è stata curata e progettata dall'architetto Vico Magistretti e dallo stesso Albe Steiner. Steiner ha anche progettato cartelloni pubblicitari simili in diverse dimensioni.</p>
+    <p>Le devastazioni della guerra e i lavori di ricostruzione sono ben illustrati da un tricolore spezzato (la bandiera italiana) in primo piano e dai piloni inclinati sullo sfondo. Tutto è enfatizzato da una tipografia traballante.</p> 
+    <p>Progettato per la Mostra della Ricostruzione tenutasi a Palazzo dell'Arengario in Piazza Duomo, Milano. La mostra è stata curata e progettata dall'architetto Vico Magistretti e dallo stesso Albe Steiner. Steiner ha anche progettato cartelloni pubblicitari simili in diverse dimensioni.</p>
     </section>
     
     
