--- a/progetti/steiner3.html
+++ b/progetti/steiner3.html
@@ -33,7 +33,8 @@
 <main>
     <section class="testo-progetto">
     <h2>T14</h2>
-    <p>Uno dei manifesti più essenziali e allo stesso tempo impattanti della storia della grafica italiana. Manifesto ufficiale della 14° mostra della Triennale di Milano, riporta il segno geometrico dell'evento (una T positiva e un 14 negativo), che qui diventa una sorta di bellissimo quadro astratto. I testi sono stampati in rosso, da sempre considerato il secondo colore tipografico per eccellenza dopo il nero, sia per differenziarli dal segno sia per valorizzarne l'impaginazione. Anche una serie di poster colorati è stata disegnata da Steiner. Inedito su internet.</p>
+    <p>Uno dei manifesti più essenziali e allo stesso tempo impattanti della storia della grafica italiana. Manifesto ufficiale della 14° mostra della Triennale di Milano, riporta il segno geometrico dell'evento (una T positiva e un 14 negativo), che qui diventa una sorta di bellissimo quadro astratto.</p> 
+    <p>I testi sono stampati in rosso, da sempre considerato il secondo colore tipografico per eccellenza dopo il nero, sia per differenziarli dal segno sia per valorizzarne l'impaginazione. Anche una serie di poster colorati è stata disegnata da Steiner. Inedito su internet.</p>
     </section>
     
     
