--- a/progetti/steiner5.html
+++ b/progetti/steiner5.html
@@ -33,7 +33,8 @@
 <main>
     <section class="testo-progetto">
     <h2>Interiors</h2>
-    <p>Copertina della rivista americana Interiors+Industrial Design che mostra una silhouette-illustrazione di quella che sembra la Pamio Lounge Chair di Alvar Aalto (1931-32). La copertina è caratterizzata da un forte impatto visivo ottenuto utilizzando forme semplici e pochi colori decisi (forma rossa, dettagli bianchi, sfondo nero). Disegnata da Steiner durante il suo breve soggiorno in Messico, pochi mesi prima del rientro in Italia. </p>
+    <p>Copertina della rivista americana Interiors+Industrial Design che mostra una silhouette-illustrazione di quella che sembra la Pamio Lounge Chair di Alvar Aalto (1931-32).</p> 
+    <p>La copertina è caratterizzata da un forte impatto visivo ottenuto utilizzando forme semplici e pochi colori decisi (forma rossa, dettagli bianchi, sfondo nero). Disegnata da Steiner durante il suo breve soggiorno in Messico, pochi mesi prima del rientro in Italia. </p>
     </section>
     
     
