--- a/progetti/steiner6.html
+++ b/progetti/steiner6.html
@@ -33,7 +33,9 @@
 <main>
     <section class="testo-progetto">
     <h2>Compasso d'Oro</h2>
-    <p>Nato da un’idea di Gio Ponti e e con il sostegno dei grandi magazzini la Rinascente, (era infatti denominato “la Rinascente – Compasso d’Oro”) è stato il primo premio del settore in Europa, ed ha lo scopo di mettere in valore la qualità del design italiano. Il logo disegnato allora da Albe Steiner su commissione della Rinascente e rimasto immutato, è diventato oggi un marchio inconfondibile di qualità e rigore. Nel 1959 il Premio venne donato all’ADI e gestito in collaborazione tra la Rinascente e l’associazione, con giurie nominate in comune; da questa data il premio fu attribuito non più all’estetica del prodotto ma esplicitamente al “disegno industriale”.</p>
+    <p>Nato da un’idea di Gio Ponti e e con il sostegno dei grandi magazzini la Rinascente, (era infatti denominato “la Rinascente - Compasso d’Oro”) è stato il primo premio del settore in Europa, ed ha lo scopo di mettere in valore la qualità del design italiano.</p> 
+    <p>Il logo disegnato allora da Albe Steiner su commissione della Rinascente e rimasto immutato, è diventato oggi un marchio inconfondibile di qualità e rigore.</p> 
+    <p>Nel 1959 il Premio venne donato all’ADI e gestito in collaborazione tra la Rinascente e l’associazione, con giurie nominate in comune; da questa data il premio fu attribuito non più all’estetica del prodotto ma esplicitamente al “disegno industriale”.</p>
     </section>
     
     
